--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 html,
 body {
-    margin: 0;
-    padding: 0;
+    margin: auto;
+    padding: auto;
     font-family: 'Rubik', sans-serif;
     background-color: #EEF0F4;
     max-width: 320px;
